--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PARKING_CAPACITY=ENTER CAPACITY OF THE PARKING
